--- a/README
+++ b/README
@@ -4,7 +4,7 @@
 # Credits: networks.h and Makefile supplied by Prof. Hugh Smith for CPE 464
 
 These two programs fuction together as a text-based chat service. Each instance of the chat client
-connects to the server using either a random or specified port, and is then able to send and receive
+connects to the server using its specified port, and is then able to send and receive
 messages to other users through the server.
 
 Available commands for clients are as follows:
@@ -36,4 +36,4 @@ To run the client:
 
 $ ./cclient <username> <server-name/address> <server-port>
 
-if the connection is successful, use the command above to talk to other clients
+if the connection is successful, use the commands above to talk to other clients
